# Cristify-STL

./: .gitignore  3.py  4.py  README.md  SDF3D.py  export_code.py  generate_and_optimize.py  gravitational_tension.py  list_output_files.py  main copia.py  main.py  mallas.py  menu.py  ml_module.py  optimizacion.py  optimizacion_fractal.py  optimize_with_ml.py  project_code.txt  project_structure.txt  pyproject.toml  reorient_repair.py  requirements-dev.txt  requirements.txt  voxelize.py
.github/workflows/: ci.yml
app/: __init__.py  cli.py
app/core/: __init__.py  cristify.py  fractal.py  gaudify.py  gravity.py  intervention.py  io.py  mesh_utils.py  simplify.py  texturize.py  wrap.py
app/gui/: __init__.py  main_gui.py  viewer.py
app/voronizer/: Frep.py  SDF3D.py  __init__.py  analysis.py  main.py  meshExport.py  pointGen.py  visualizeSlice.py  voronize.py  voxelize.py
assets/: __init__.py
data/: __init__.py
docs/: README.md
examples/: README.md
scripts/: 1.py  2.py  5.py  create_project_structure.py  load_save.py  main copia 2.py  main.py  optimizacion_fractal.py  repair_mesh.py
tests/: test_cli.py  test_cristify.py  test_fractal.py  test_gravity.py  test_gui.py  test_intervention.py  test_io.py  test_mesh_utils.py  test_new_ops.py  test_texturize.py  test_voronize_cli.py  test_voronizer_pipeline.py
