[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cristify-stl"
version = "0.1.0"
authors = [{name = "Rolphs"}]
dependencies = [
    "trimesh==4.6.11",
    "open3d==0.19.0",
    "pymeshlab==2023.12.post3",
    "numpy==1.26.4",
    "scipy==1.15.3",
    "dearpygui==1.11.1",
    "networkx==3.5",
]

[project.scripts]
cristify-stl = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
